syntax = "proto3";

package pb;

option go_package = "./;pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Reading is a processed from external systems structure.
// It is temporarily stored for aggregation and dispatch tracking purposes.
message Reading {
  google.protobuf.Timestamp record_at = 1;
  string dispatch_id = 2;
  string meter_id = 3;
  string interval = 4;
  float value = 5;
}

service Metering {
  rpc UploadMeteringReading(Reading) returns (google.protobuf.Empty);
}